# misora2_operation

./: .gitignore  CMakeLists.txt  README.md  click_metal_image.py  package.xml
include/misora2_operation/: cv_mat_type_adapter.hpp  gui_tool.hpp  operator_gui_component.hpp
src/: gui_tool.cpp  operator_gui_component.cpp  operator_gui_node.cpp
